Added links to docs and example app in readme

--- a/examples/counter/index.html
+++ b/examples/counter/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css" media="screen">
 
     <script type="module">
-        import { Nanny, html } from "https://esm.run/nanny-state";
+        import { Nanny, html } from "https://cdn.skypack.dev/nanny-state";
 
         // initial state
         const State = 10
